--- a/www.hzshuangmei.com/templets/shuangmei/list_doctors.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_doctors.htm
@@ -27,43 +27,42 @@
             <ul class="doc_fdiv clearFix"> {dede:arclist typeid=3 isweight='y' orderby='weight'}
                 <li>
                     <div class="doctor1">
-                        <div><img src="[field:id function='getdoctorthumb(@me) /]" alt="[field:title/]"></div>
-                        <div class="clearFix"><a href="[field:arcurl/]" class="order" target="_blank"><span>详细<br/>                                   了解</span></a>
-                            <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>马上<br/>                                   预约</span></a>
+                        <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
+                        <div class="clearFix"><a href="[field:arcurl/]" class="order" target="_blank"><span>详细<br/>了解</span></a>
+                            <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>马上<br/> 预约</span></a>
                         </div>
                     </div>
-                    <p class="doc_p1"><span>[field:title/]</span>[field:id function='getdoctorzhiwei(@me) /]</p>
-
-                    <p class="doc_p2">擅长项目：[field:id function='getdoctorshanchang(@me) /]</p>                    <i></i>
+                    <p class="doc_p1"><span>[field:title/]</span>[field:zhiwei/]</p>
+                    <p class="doc_p2">擅长项目：[field:shanchang/]</p><i></i>
                 </li>
                 {/dede:arclist}
             </ul>
             <ul class="clearFix"> {dede:arclist typeid=4 isweight='y' orderby='weight'}
                 <li>
                     <div class="doctor1">
-                        <div><img src="[field:id function='getdoctorthumb(@me) /]" alt="[field:title/]"></div>
+                        <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
                         <div class="clearFix"><a href="[field:arcurl/]" class="order" target="_blank"><span>详细<br/>                                   了解</span></a>
                             <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>马上<br/>                                   预约</span></a>
                         </div>
                     </div>
-                    <p class="doc_p1"><span>[field:title/]</span>[field:id function='getdoctorzhiwei(@me) /]</p>
+                    <p class="doc_p1"><span>[field:title/]</span>[field:zhiwei/]</p>
 
-                    <p class="doc_p2">擅长项目：[field:id function='getdoctorshanchang(@me) /]</p>                    <i></i>
+                    <p class="doc_p2">擅长项目：[field:shanchang/]</p><i></i>
                 </li>
                 {/dede:arclist}
             </ul>
             <ul class="clearFix"> {dede:arclist typeid=5 isweight='y' orderby='weight'}
                 <li>
                     <div class="doctor1">
-                        <div><img src="[field:id function='getdoctorthumb(@me) /]" alt="[field:title/]"></div>
+                        <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
                         <div class="clearFix"><a href="[field:arcurl/]" class="order" target="_blank"><span>详细<br/>                                   了解</span></a>
                         <!--<div class="clearFix"><a href="javascript:void(0)" class="order j-site-consult" target="_blank"><span>详细<br/>                                   了解</span></a>-->
                             <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>马上<br/>                                   预约</span></a>
                         </div>
                     </div>
-                    <p class="doc_p1"><span>[field:title/]</span>[field:id function='getdoctorzhiwei(@me) /]</p>
+                    <p class="doc_p1"><span>[field:title/]</span>[field:zhiwei/]</p>
 
-                    <p class="doc_p2">擅长项目：[field:id function='getdoctorshanchang(@me) /]</p>                    <i></i>
+                    <p class="doc_p2">擅长项目：[field:shanchang/]</p> <i></i>
                 </li>
                 {/dede:arclist}
             </ul>
