--- a/www.hzshuangmei.com/templets/shuangmei/list_doctors.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_doctors.htm
@@ -24,7 +24,7 @@
             </ul>
         </div>
         <div id="doctors_tabCon">
-            <ul class="doc_fdiv clearFix"> {dede:arclist typeid=3 isweight='y' orderby='weight'}
+            <ul class="doc_fdiv clearFix"> {dede:arclist typeid=3 isweight='y' orderby='weight' addfields="zhiwei,thumb,shanchang"}
                 <li>
                     <div class="doctor1">
                         <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
@@ -37,7 +37,7 @@
                 </li>
                 {/dede:arclist}
             </ul>
-            <ul class="clearFix"> {dede:arclist typeid=4 isweight='y' orderby='weight'}
+            <ul class="clearFix"> {dede:arclist typeid=4 isweight='y' orderby='weight' addfields="zhiwei,thumb,shanchang"}
                 <li>
                     <div class="doctor1">
                         <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
@@ -51,7 +51,7 @@
                 </li>
                 {/dede:arclist}
             </ul>
-            <ul class="clearFix"> {dede:arclist typeid=5 isweight='y' orderby='weight'}
+            <ul class="clearFix"> {dede:arclist typeid=5 isweight='y' orderby='weight' addfields="zhiwei,thumb,shanchang"}
                 <li>
                     <div class="doctor1">
                         <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
