首页专家调用数量
首页专家调用数量

--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -172,7 +172,7 @@
                 <!-- Swiper -->
                 <div class="swiper-container swiper-container4">
                     <div class="swiper-wrapper">
-                        {dede:arclist typeid=3 isweight='y' orderby='weight' orderway='asc' addfields="thumb2,zhiwei" channelid="17" }
+                        {dede:arclist typeid=3 isweight='y' orderby='weight' orderway='asc' addfields="thumb2,zhiwei" channelid="17"  row="20"}
                         <div class="swiper-slide">
                             <a href="[field:arcurl/]" target="_blank">
                                 <img src="[field:thumb2 function='replaceurl(@me)/]" alt="[field:title/]"/>
@@ -188,7 +188,7 @@
             <li>
                 <div class="swiper-container swiper-container4">
                     <div class="swiper-wrapper">
-                        {dede:arclist typeid=4  isweight='y'  orderby='weight' orderway='asc' addfields="thumb2,zhiwei" channelid="17"}
+                        {dede:arclist typeid=4  isweight='y'  orderby='weight' orderway='asc' addfields="thumb2,zhiwei" channelid="17" row="20"}
                         <div class="swiper-slide">
                             <a href="[field:arcurl/]" target="_blank">
                                 <img src="[field:thumb2 function='replaceurl(@me)/]" alt="[field:title/]"/>
@@ -204,7 +204,7 @@
             <li>
                 <div class="swiper-container swiper-container4">
                     <div class="swiper-wrapper">
-                        {dede:arclist typeid=5  isweight='y'  orderby='weight' orderway='asc' addfields="thumb2,zhiwei" channelid="17"}
+                        {dede:arclist typeid=5  isweight='y'  orderby='weight' orderway='asc' addfields="thumb2,zhiwei" channelid="17" row="20"}
                         <div class="swiper-slide">
                             <!--<a href="[field:arcurl/]" target="_blank">-->
                             <a class="j-site-consult" href="javascript:void(0)" target="_blank">
