--- a/www.hzshuangmei.com/templets/shuangmei/_header.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_header.htm
@@ -147,7 +147,7 @@
                     <li>
                         <h5><a href="">整形美容专家</a></h5>
                     </li>
-                    {dede:arclist typeid=3  channelid="17"  isweight='y'  orderby='weight' orderway='asc' row='2' addfields="zhiwei,thumb"}
+                    {dede:arclist typeid=3  channelid="17"  isweight='y'  orderby='weight'  row='2' addfields="zhiwei,thumb"}
                     <li>
                         <a href="[field:arcurl/]" target="_blank">
                             <img src="[field:thumb function=replaceurl(@me)/]" alt="[field:title/]"/>
@@ -160,7 +160,7 @@
                     <li>
                         <h5><a href="">激光美容专家</a></h5>
                     </li>
-                    {dede:arclist typeid=4   channelid="17" isweight='y' orderby='weight' orderway='asc' row='2' addfields="zhiwei,thumb"}
+                    {dede:arclist typeid=4   channelid="17" isweight='y' orderby='weight'  row='2' addfields="zhiwei,thumb"}
                     <li>
                         <a href="[field:arcurl/]" target="_blank">
                             <img src="[field:thumb function=replaceurl(@me)/]" alt="[field:title/]"/>
@@ -174,7 +174,7 @@
                     <li>
                         <h5><a href="">医学纹绣</a></h5>
                     </li>
-                    {dede:arclist typeid=5    channelid="17" isweight='y' orderby='weight' orderway='asc' row='2' addfields="zhiwei,thumb"}
+                    {dede:arclist typeid=5    channelid="17" isweight='y' orderby='weight'  row='2' addfields="zhiwei,thumb"}
                     <li>
                         <a href="[field:arcurl/]" target="_blank">
                         <!--<a class="j-site-consult" href="javascript:void(0)" target="_blank">-->
