品牌页模板隐藏超声刀设备
品牌页模板隐藏超声刀设备

--- a/www.hzshuangmei.com/templets/shuangmei/index_brand.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index_brand.htm
@@ -249,9 +249,14 @@
                         </li>
                         <li class="slide-item">
                             <ul class="f-cb">
-                                <li>
+                               <!--  <li>
                                     <a href="https://www.hzshuangmei.com/equipment/54.html" title="超声刀">
                                       <img src="https://img.hzshuangmei.com/pc/brandzt/img64.jpg" alt="超声刀 ">
+                                    </a>
+                                </li> -->
+                                <li>
+                                    <a href="https://www.hzshuangmei.com/equipment/56.html" title="皮秒激光仪">
+                                         <img src="https://img.hzshuangmei.com/pc/brandzt/img610.jpg" alt="皮秒激光仪">
                                     </a>
                                 </li>
                                 <li>
