--- a/m.hzshuangmei.com/templets/shuangmei/index_brand.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/index_brand.htm
@@ -220,17 +220,17 @@
                                       <img src="https://img.hzshuangmei.com/m/brandzt/img64.jpg" alt="超声刀 ">
                                     </a>
                                     </li> -->
-
+                                    <li>
+                                        <a href="https://m.hzshuangmei.com/equipment/58.html" title="水光注射仪">
+                                       <img src="https://img.hzshuangmei.com/m/brandzt/img63.jpg" alt="水光注射仪">
+                                    </a>
+                                    </li>
                                     <li>
                                         <a href="https://m.hzshuangmei.com/equipment/60.html" title="无创水光仪">
                                       <img src="https://img.hzshuangmei.com/m/brandzt/img65.jpg" alt="无创水光仪">
                                      </a>
                                     </li>
-                                    <li>
-                                        <a href="https://m.hzshuangmei.com/equipment/56.html" title="皮秒激光仪">
-                                         <img src="https://img.hzshuangmei.com/m/brandzt/img610.jpg" alt="皮秒激光仪">
-                                    </a>
-                                    </li>
+
                                     <li>
                                         <a href="https://m.hzshuangmei.com/equipment/51.html" title="IPL强脉冲光仪">
                                         <img src="https://img.hzshuangmei.com/m/brandzt/img66.jpg" alt="IPL强脉冲光仪">
