--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -104,7 +104,7 @@
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_04.jpg" alt="红妆芭比翘鼻"/></a>
                         <a href="/projects/nose/heben.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_05.jpg" alt="赫本软骨鼻"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_06.jpg" alt="自体脂肪填充"/></a>
-                        <a class="/projects/chest/hzwhfx.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_07.jpg" alt="无痕丰胸"/></a>
+                        <a href="/projects/chest/hzwhfx.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_07.jpg" alt="无痕丰胸"/></a>
                     </div>
                 </div>
             </li>
