--- a/www.hzshuangmei.com/templets/shuangmei/_header.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_header.htm
@@ -39,7 +39,7 @@
             <div class="clearFix" id="project">
                 <ul>
                     <li>
-                        <h5><a href="">医学纹绣</a></h5>
+                        <h5><a href="/projects" target="_blank">医学纹绣</a></h5>
                     </li>
                     {dede:arclist typeid=20 orderby='id' row='3'}
                     <li>
@@ -55,7 +55,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="">眼部整形</a></h5>
+                        <h5><a href="/projects" target="_blank">眼部整形</a></h5>
                     </li>
                     {dede:arclist typeid=15 orderby='id' row='3'}
                     <li>
@@ -69,7 +69,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="">鼻部整形</a></h5>
+                        <h5><a href="/projects" target="_blank">鼻部整形</a></h5>
                     </li>
                     {dede:arclist typeid=14 orderby='id' row='3'}
                     <li>
@@ -83,7 +83,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="">面部整形</a></h5>
+                        <h5><a href="/projects" target="_blank">面部整形</a></h5>
                     </li>
                     {dede:arclist typeid=16 orderby='id' row='3'}
                     <li class="star">
@@ -97,7 +97,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="">皮肤美容</a></h5>
+                        <h5><a href="/projects" target="_blank">皮肤美容</a></h5>
                     </li>
                     {dede:arclist typeid=21 orderby='id' row='3'}
                     <li>
@@ -111,7 +111,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="">玻尿酸</a></h5>
+                        <h5><a href="/projects" target="_blank">玻尿酸</a></h5>
                     </li>
                     {dede:arclist typeid=22 orderby='id' row='3'}
                     <li>
@@ -125,7 +125,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="">形体雕塑</a></h5> </li> {dede:arclist typeid=19 orderby='id' row='3'}
+                        <h5><a href="/projects" target="_blank">形体雕塑</a></h5> </li> {dede:arclist typeid=19 orderby='id' row='3'}
                     <li>
                         <a href="[field:arcurl/]" target="_blank">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
@@ -145,7 +145,7 @@
             <div id="expert">
                 <ul>
                     <li>
-                        <h5><a href="">整形美容专家</a></h5>
+                        <h5><a href="/doctors" target="_blank">整形美容专家</a></h5>
                     </li>
                     {dede:arclist typeid=3  channelid="17"  isweight='y'  orderby='weight'  row='2' addfields="zhiwei,thumb"}
                     <li>
@@ -158,7 +158,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="">激光美容专家</a></h5>
+                        <h5><a href="/doctors" target="_blank">激光美容专家</a></h5>
                     </li>
                     {dede:arclist typeid=4   channelid="17" isweight='y' orderby='weight'  row='2' addfields="zhiwei,thumb"}
                     <li>
@@ -172,7 +172,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="">医学纹绣</a></h5>
+                        <h5><a href="/doctors" target="_blank">医学纹绣</a></h5>
                     </li>
                     {dede:arclist typeid=5    channelid="17" isweight='y' orderby='weight'  row='2' addfields="zhiwei,thumb"}
                     <li>
@@ -187,7 +187,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="">特邀专家</a></h5>
+                        <h5><a href="/doctors" target="_blank">特邀专家</a></h5>
                     </li>
                     {dede:arclist typeid=2   channelid="17" flag="h" orderby='id' row='2' addfields="zhiwei,thumb"}
                     <li>
@@ -201,7 +201,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5 class="moon"><a href="">每月专家</a></h5>
+                        <h5 class="moon"><a href="/doctors" target="_blank">每月专家</a></h5>
                     </li>
                     <li class="last-one">
                         <a class="last-one" href="https://www.hzshuangmei.com/doctors/surgery/liudalie.html " target="_blank">
