--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -116,7 +116,7 @@
                     <div class="right clearFix">
                         <!--<a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_09.jpg" alt="超声刀"/></a>-->
                         <a href="projects/quban/pimiao.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_11.jpg" alt="皮秒祛斑"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_10.jpg" alt="祛雀斑"/></a>
+                        <a href="projects/quban/queban.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_10.jpg" alt="祛雀斑"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_09_1.jpg" alt="光子嫩肤"/></a>
                         <a href="projects/tuomao/tuomao2.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_12.jpg" alt="清凉脱毛"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_13.jpg" alt="毛孔收缩"/></a>
@@ -133,7 +133,7 @@
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_17.jpg" alt="瑞蓝玻尿酸"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_18.jpg" alt="逸美玻尿酸"/></a>
                         <a href="projects/ha/ifresh.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_19.jpg" alt="爱芙莱玻尿酸"/></a>
-                        <a  href="projects/botox/shoulianzhen2.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_20.jpg" alt="瘦脸针"/></a>
+                        <a href="projects/botox/shoulianzhen2.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_20.jpg" alt="瘦脸针"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_21.jpg" alt="BOTOX"/></a>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                     <div class="right clearFix">
                         <a href="projects/tattoo/byjwm.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_23.jpg" alt="韩式半永久纹眉"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_24.jpg" alt="韩式粉雾眉"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_25.jpg" alt="美瞳线"/></a>
+                        <a href="projects/tattoo/yanxian.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_25.jpg" alt="美瞳线"/></a>
                         <a  class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_26.jpg" alt="韩式丝雾眉"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_27.jpg" alt="艺术晶唇"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_28.jpg" alt="五度空间仿真眉"/></a>
