手机端项目列表 banner 换成首页banner
手机端项目列表 banner 换成首页banner

--- a/m.hzshuangmei.com/templets/shuangmei/list_project.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/list_project.htm
@@ -18,8 +18,8 @@
         <!-- /menu -->
         <div class="contents">
             <h1><span class="sr-only">{dede:field.seotitle/}_{dede:global.cfg_webname/}</span></h1>
-            <!-- 顶部banner -->
-            {dede:myad name='projectpic_sj'/}
+             <!-- 顶部banner -->
+            {dede:myad name='topbanner_sj'/}
             <!-- /顶部banner -->
             <div class="project-nav">
                 <ul class="f-cb nav-wrap" id="projectnav">
