--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -172,14 +172,22 @@
                 <!-- Swiper -->
                 <div class="swiper-container swiper-container4">
                     <div class="swiper-wrapper">
-                        {dede:arclist typeid=3 isweight='y' orderby='weight' orderway='asc' addfields="thumb2,zhiwei" channelid="17"  row="20"}
+             <!--            {dede:arclist typeid=3 isweight='y' orderby='weight' orderway='asc' addfields="thumb2,zhiwei" channelid="17"  row="20"}
                         <div class="swiper-slide">
                             <a href="[field:arcurl/]" target="_blank">
                                 <img src="[field:thumb2 function='replaceurl(@me)/]" alt="[field:title/]"/>
                                 <p>[[field:zhiwei/]] [field:title/]</p>
                             </a>
                         </div>
-                        {/dede:arclist}
+                        {/dede:arclist} -->
+                        {dede:sql sql="select * from  sm_archives as a,sm_addondoctors as b where a.id=b.aid and  a.channel=17  and  a.typeid=3  order by  a.weight asc }
+                         <div class="swiper-slide">
+                            <a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" target="_blank">
+                                <img src="[field:thumb2 function='replaceurl(@me)/]" alt="[field:title/]"/>
+                                <p>[[field:zhiwei/]] [field:title/]</p>
+                            </a>
+                        </div>
+                        {/dede:sql}
                     </div>
                 </div>
                 <div class="swiper-button-next swiper-button-next4"></div>
@@ -188,14 +196,22 @@
             <li>
                 <div class="swiper-container swiper-container4">
                     <div class="swiper-wrapper">
-                        {dede:arclist typeid=4  isweight='y'  orderby='weight' orderway='asc' addfields="thumb2,zhiwei" channelid="17" row="20"}
+        <!--                 {dede:arclist typeid=4  isweight='y'  orderby='weight' orderway='asc' addfields="thumb2,zhiwei" channelid="17" row="20"}
                         <div class="swiper-slide">
                             <a href="[field:arcurl/]" target="_blank">
                                 <img src="[field:thumb2 function='replaceurl(@me)/]" alt="[field:title/]"/>
                                 <p>[[field:zhiwei/]] [field:title/]</p>
                             </a>
                         </div>
-                        {/dede:arclist}
+                        {/dede:arclist} -->
+               {dede:sql sql="select * from  sm_archives as a,sm_addondoctors as b where a.id=b.aid and  a.channel=17  and  a.typeid=4  order by  a.weight asc }
+                         <div class="swiper-slide">
+                            <a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" target="_blank">
+                                <img src="[field:thumb2 function='replaceurl(@me)/]" alt="[field:title/]"/>
+                                <p>[[field:zhiwei/]] [field:title/]</p>
+                            </a>
+                        </div>
+                        {/dede:sql}
                     </div>
                 </div>
                 <div class="swiper-button-next swiper-button-next4"></div>
@@ -204,15 +220,22 @@
             <li>
                 <div class="swiper-container swiper-container4">
                     <div class="swiper-wrapper">
-                        {dede:arclist typeid=5  isweight='y'  orderby='weight' orderway='asc' addfields="thumb2,zhiwei" channelid="17" row="20"}
+                 <!--        {dede:arclist typeid=5  isweight='y'  orderby='weight' orderway='asc' addfields="thumb2,zhiwei" channelid="17" row="20"}
                         <div class="swiper-slide">
-                            <!--<a href="[field:arcurl/]" target="_blank">-->
                             <a class="j-site-consult" href="javascript:void(0)" target="_blank">
                                 <img src="[field:thumb2 function='replaceurl(@me)/]" alt="[field:title/]"/>
                                 <p>[[field:zhiwei/]] [field:title/]</p>
                             </a>
                         </div>
-                        {/dede:arclist}
+                        {/dede:arclist} -->
+                                       {dede:sql sql="select * from  sm_archives as a,sm_addondoctors as b where a.id=b.aid and  a.channel=17  and  a.typeid=5  order by  a.weight asc }
+                         <div class="swiper-slide">
+                            <a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" target="_blank">
+                                <img src="[field:thumb2 function='replaceurl(@me)/]" alt="[field:title/]"/>
+                                <p>[[field:zhiwei/]] [field:title/]</p>
+                            </a>
+                        </div>
+                        {/dede:sql}
                     </div>
                 </div>
                 <div class="swiper-button-next swiper-button-next4"></div>
