--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -180,7 +180,7 @@
                             </a>
                         </div>
                         {/dede:arclist} -->
-                        {dede:sql sql="select * from  sm_archives as a,sm_addondoctors as b where a.id=b.aid and  a.channel=17  and  a.typeid=3  order by  a.weight asc }
+                        {dede:sql sql="select * from  sm_archives as a,sm_addondoctors as b where a.id=b.aid and  a.channel=17  and  a.typeid=3  and  a.id not in(36,151,154) order by  a.weight asc }
                          <div class="swiper-slide">
                             <a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" target="_blank">
                                 <img src="[field:thumb2 function='replaceurl(@me)/]" alt="[field:title/]"/>
