--- a/www.hzshuangmei.com/templets/shuangmei/article_case.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/article_case.htm
@@ -59,6 +59,9 @@
                     <div class="clearFix">
                         {dede:field.imgs1/}
                     </div>
+                    <div class="note">
+                        {dede:field.note1 function='@me=@me==""?"":"<p>@me</p>"'/}
+                    </div>
                 </div>
                 <div class="main_content">
                     <h4>{dede:field.title2/}{dede:field.title2 function='@me=@me==""?"":"<i></i>"'/} </h4>
@@ -68,6 +71,9 @@
                     <div class="clearFix">
                         {dede:field.imgs2/}
                     </div>
+                    <div class="note">
+                        {dede:field.note2 function='@me=@me==""?"":"<p>@me</p>"'/}
+                    </div>
                 </div>
                 <div class="main_content">
                     <h4>{dede:field.title3/}{dede:field.title3 function='@me=@me==""?"":"<i></i>"'/} </h4>
@@ -76,6 +82,9 @@
 
                     <div class="clearFix">
                         {dede:field.imgs3/}
+                    </div>
+                    <div class="note">
+                        {dede:field.note3 function='@me=@me==""?"":"<p>@me</p>"'/}
                     </div>
                 </div>
                 {dede:field.body/}
