--- a/m.hzshuangmei.com/templets/shuangmei/_meta.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/_meta.htm
@@ -11,6 +11,7 @@
 <meta name="x5-orientation" content="portrait">
 <meta name="x5-fullscreen" content="true" />
 <meta name="full-screen" content="yes">
+<meta name="format-detection" content="telephone=no,email=no,adress=no">
 <!-- ios app style -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
